// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildReport > astro: matches the approved JSON shape 1`] = `
{
  "caveats": [
    {
      "code": "public-dir-dead",
      "count": 1,
      "detail": [],
      "message": "1 unreferenced image under the public directory may be linked from outside this repository",
    },
    {
      "code": "not-probed",
      "count": 0,
      "detail": [],
      "message": "images were not decoded, so oversized assets and format opportunities are unknown",
    },
  ],
  "coverage": {
    "excludedRoots": [
      {
        "path": "node_modules",
        "reason": "a build or version-control directory named 'node_modules'",
      },
    ],
    "servingRoots": {
      "declared": true,
      "dirs": [
        "public",
      ],
    },
    "unscannedExtensions": [],
    "unscannedFileCount": 0,
  },
  "declined": {
    "assets": null,
    "bytes": 0,
    "count": 0,
  },
  "findings": [
    {
      "asset": "public/never-used.png",
      "bytes": 70,
      "inPublicDir": true,
      "kind": "dead",
    },
  ],
  "references": {
    "byConfidence": {
      "certain": 1,
      "high": 6,
      "medium": 0,
      "unsafe": 0,
    },
    "byResolution": {
      "broken": 0,
      "discarded": 0,
      "dynamic": 0,
      "out-of-scope": 0,
      "resolved": 7,
      "resolved-pattern": 0,
      "unresolved-alias": 0,
    },
    "byResolvedVia": {
      "file": 2,
      "project-root": 0,
      "serving-root": 5,
      "speculative-root": 0,
    },
    "discarded": null,
    "discardedCount": 0,
    "unsafe": [],
  },
  "skipped": [],
  "staleConversions": [],
  "summary": {
    "assetBytes": 83761,
    "assets": 7,
    "findings": {
      "broken": 0,
      "dead": 1,
      "format-opportunity": 0,
      "oversized": 0,
      "possibly-dead": 0,
      "serving-root-unknown": 0,
    },
    "linkedReferences": 7,
    "potentialSavingBytes": 0,
    "probed": false,
    "referencedAssets": 6,
    "references": 7,
    "savingQuality": {},
    "sourceFiles": 5,
  },
  "unusedVectors": {
    "assets": null,
    "bytes": 0,
    "count": 0,
  },
  "version": 3,
}
`;

exports[`buildReport > astro: matches the approved human rendering 1`] = `
"Upfly audit

  savings not measured — images were not decoded (--no-probe)

  scanned 5 source files and found 7 images, 83.8 KB in total
  7 of 7 references resolved, pointing at 6 of those images
  1 image with no reference Upfly could follow

Nothing was skipped.

Findings — 1 item

  unreferenced images (1)
    public/never-used.png  70 B

Worth knowing

  1 unreferenced image under the public directory may be linked from outside this repository
  images were not decoded, so oversized assets and format opportunities are unknown
"
`;

exports[`buildReport > eleventy: matches the approved JSON shape 1`] = `
{
  "caveats": [
    {
      "code": "public-dir-dead",
      "count": 1,
      "detail": [],
      "message": "1 unreferenced image under the public directory may be linked from outside this repository",
    },
    {
      "code": "not-probed",
      "count": 0,
      "detail": [],
      "message": "images were not decoded, so oversized assets and format opportunities are unknown",
    },
    {
      "code": "unscanned-extensions",
      "count": 2,
      "detail": [
        ".njk — 2 files",
      ],
      "message": "1 file type had no adapter, so 2 files went unread",
    },
  ],
  "coverage": {
    "excludedRoots": [
      {
        "path": "node_modules",
        "reason": "a build or version-control directory named 'node_modules'",
      },
    ],
    "servingRoots": {
      "declared": true,
      "dirs": [
        "src",
      ],
    },
    "unscannedExtensions": [
      {
        "ext": ".njk",
        "fileCount": 2,
      },
    ],
    "unscannedFileCount": 2,
  },
  "declined": {
    "assets": null,
    "bytes": 0,
    "count": 0,
  },
  "findings": [
    {
      "asset": "src/img/unused.png",
      "bytes": 70,
      "inPublicDir": true,
      "kind": "dead",
    },
    {
      "asset": "src/img/favicon.png",
      "bytes": 70,
      "evidence": [
        {
          "asset": "src/img/favicon.png",
          "quote": "favicon.png",
          "source": "unscanned-file",
          "where": "src/_includes/base.njk:4",
        },
      ],
      "inPublicDir": true,
      "kind": "possibly-dead",
    },
    {
      "asset": "src/img/hero.jpg",
      "bytes": 12557,
      "evidence": [
        {
          "asset": "src/img/hero.jpg",
          "quote": "hero.jpg",
          "source": "unscanned-file",
          "where": "src/index.njk:6",
        },
      ],
      "inPublicDir": true,
      "kind": "possibly-dead",
    },
    {
      "asset": "src/img/logo.png",
      "bytes": 7195,
      "evidence": [
        {
          "asset": "src/img/logo.png",
          "quote": "logo.png",
          "source": "unscanned-file",
          "where": "src/index.njk:5",
        },
      ],
      "inPublicDir": true,
      "kind": "possibly-dead",
    },
    {
      "asset": "src/img/templated.png",
      "bytes": 70,
      "evidence": [
        {
          "asset": "src/img/templated.png",
          "quote": "{{ site.url }}/img/templated.png",
          "source": "unresolved-reference",
          "where": "src/posts/first.md:7",
        },
      ],
      "inPublicDir": true,
      "kind": "possibly-dead",
    },
  ],
  "references": {
    "byConfidence": {
      "certain": 0,
      "high": 3,
      "medium": 0,
      "unsafe": 1,
    },
    "byResolution": {
      "broken": 0,
      "discarded": 0,
      "dynamic": 1,
      "out-of-scope": 0,
      "resolved": 3,
      "resolved-pattern": 0,
      "unresolved-alias": 0,
    },
    "byResolvedVia": {
      "file": 0,
      "project-root": 0,
      "serving-root": 3,
      "speculative-root": 0,
    },
    "discarded": null,
    "discardedCount": 0,
    "unsafe": [
      {
        "file": "src/posts/first.md",
        "rawPath": "{{ site.url }}/img/templated.png",
        "reason": "contains a Handlebars, Mustache, Vue or Jinja expression: the path is not known statically",
        "resolution": "dynamic",
      },
    ],
  },
  "skipped": [],
  "staleConversions": [],
  "summary": {
    "assetBytes": 91846,
    "assets": 8,
    "findings": {
      "broken": 0,
      "dead": 1,
      "format-opportunity": 0,
      "oversized": 0,
      "possibly-dead": 4,
      "serving-root-unknown": 0,
    },
    "linkedReferences": 3,
    "potentialSavingBytes": 0,
    "probed": false,
    "referencedAssets": 3,
    "references": 4,
    "savingQuality": {},
    "sourceFiles": 4,
  },
  "unusedVectors": {
    "assets": null,
    "bytes": 0,
    "count": 0,
  },
  "version": 3,
}
`;

exports[`buildReport > eleventy: matches the approved human rendering 1`] = `
"Upfly audit

  savings not measured — images were not decoded (--no-probe)

  scanned 4 source files and found 8 images, 91.8 KB in total
  3 of 4 references resolved, pointing at 3 of those images
  5 images with no reference Upfly could follow

1 reference could not be resolved safely

  (the file it was found in, then the path text as written)

  src/posts/first.md  {{ site.url }}/img/templated.png
    dynamic — contains a Handlebars, Mustache, Vue or Jinja expression: the path is not known statically

Findings — 5 items

  unreferenced images (1)
    src/img/unused.png  70 B

  possibly unreferenced (4) — each is named somewhere, but not by a reference Upfly could follow

    named in a file no adapter reads — an adapter or a config entry would resolve these (3)
      src/index.njk — 2 assets
        src/img/hero.jpg  12.6 KB
          named in src/index.njk:6: hero.jpg
        src/img/logo.png  7.2 KB
          named in src/index.njk:5: logo.png
      src/_includes/base.njk — 1 asset
        src/img/favicon.png  70 B
          named in src/_includes/base.njk:4: favicon.png

    named by a path Upfly read but could not resolve — nothing to fix; those files parse fine (1)
      src/posts/first.md — 1 asset
        src/img/templated.png  70 B
          named in src/posts/first.md:7: {{ site.url }}/img/templated.png

Worth knowing

  1 unreferenced image under the public directory may be linked from outside this repository
  images were not decoded, so oversized assets and format opportunities are unknown
  1 file type had no adapter, so 2 files went unread:
    .njk — 2 files
"
`;

exports[`buildReport > next-app: matches the approved JSON shape 1`] = `
{
  "caveats": [
    {
      "code": "public-dir-dead",
      "count": 1,
      "detail": [],
      "message": "1 unreferenced image under the public directory may be linked from outside this repository",
    },
    {
      "code": "not-probed",
      "count": 0,
      "detail": [],
      "message": "images were not decoded, so oversized assets and format opportunities are unknown",
    },
  ],
  "coverage": {
    "excludedRoots": [
      {
        "path": "node_modules",
        "reason": "a build or version-control directory named 'node_modules'",
      },
    ],
    "servingRoots": {
      "declared": true,
      "dirs": [
        "public",
      ],
    },
    "unscannedExtensions": [],
    "unscannedFileCount": 0,
  },
  "declined": {
    "assets": null,
    "bytes": 0,
    "count": 0,
  },
  "findings": [
    {
      "asset": "public/unreferenced.png",
      "bytes": 70,
      "inPublicDir": true,
      "kind": "dead",
    },
  ],
  "references": {
    "byConfidence": {
      "certain": 1,
      "high": 10,
      "medium": 0,
      "unsafe": 0,
    },
    "byResolution": {
      "broken": 0,
      "discarded": 0,
      "dynamic": 0,
      "out-of-scope": 0,
      "resolved": 11,
      "resolved-pattern": 0,
      "unresolved-alias": 0,
    },
    "byResolvedVia": {
      "file": 1,
      "project-root": 0,
      "serving-root": 10,
      "speculative-root": 0,
    },
    "discarded": null,
    "discardedCount": 0,
    "unsafe": [],
  },
  "skipped": [],
  "staleConversions": [],
  "summary": {
    "assetBytes": 338489,
    "assets": 10,
    "findings": {
      "broken": 0,
      "dead": 1,
      "format-opportunity": 0,
      "oversized": 0,
      "possibly-dead": 0,
      "serving-root-unknown": 0,
    },
    "linkedReferences": 11,
    "potentialSavingBytes": 0,
    "probed": false,
    "referencedAssets": 9,
    "references": 11,
    "savingQuality": {},
    "sourceFiles": 8,
  },
  "unusedVectors": {
    "assets": null,
    "bytes": 0,
    "count": 0,
  },
  "version": 3,
}
`;

exports[`buildReport > next-app: matches the approved human rendering 1`] = `
"Upfly audit

  savings not measured — images were not decoded (--no-probe)

  scanned 8 source files and found 10 images, 338.5 KB in total
  11 of 11 references resolved, pointing at 9 of those images
  1 image with no reference Upfly could follow

Nothing was skipped.

Findings — 1 item

  unreferenced images (1)
    public/unreferenced.png  70 B

Worth knowing

  1 unreferenced image under the public directory may be linked from outside this repository
  images were not decoded, so oversized assets and format opportunities are unknown
"
`;

exports[`buildReport > plain-html: matches the approved JSON shape 1`] = `
{
  "caveats": [
    {
      "code": "not-probed",
      "count": 0,
      "detail": [],
      "message": "images were not decoded, so oversized assets and format opportunities are unknown",
    },
  ],
  "coverage": {
    "excludedRoots": [],
    "servingRoots": {
      "declared": true,
      "dirs": [
        "",
      ],
    },
    "unscannedExtensions": [],
    "unscannedFileCount": 0,
  },
  "declined": {
    "assets": null,
    "bytes": 0,
    "count": 0,
  },
  "findings": [
    {
      "file": "about.html",
      "kind": "broken",
      "line": 10,
      "rawPath": "images/missing-on-purpose.png",
      "where": "about.html:10",
    },
    {
      "asset": "images/never-referenced.png",
      "bytes": 70,
      "inPublicDir": false,
      "kind": "dead",
    },
    {
      "asset": "images/removed.png",
      "bytes": 70,
      "inPublicDir": false,
      "kind": "dead",
    },
  ],
  "references": {
    "byConfidence": {
      "certain": 0,
      "high": 10,
      "medium": 0,
      "unsafe": 1,
    },
    "byResolution": {
      "broken": 1,
      "discarded": 0,
      "dynamic": 0,
      "out-of-scope": 0,
      "resolved": 10,
      "resolved-pattern": 0,
      "unresolved-alias": 0,
    },
    "byResolvedVia": {
      "file": 10,
      "project-root": 0,
      "serving-root": 0,
      "speculative-root": 0,
    },
    "discarded": null,
    "discardedCount": 0,
    "unsafe": [],
  },
  "skipped": [],
  "staleConversions": [],
  "summary": {
    "assetBytes": 152483,
    "assets": 11,
    "findings": {
      "broken": 1,
      "dead": 2,
      "format-opportunity": 0,
      "oversized": 0,
      "possibly-dead": 0,
      "serving-root-unknown": 0,
    },
    "linkedReferences": 10,
    "potentialSavingBytes": 0,
    "probed": false,
    "referencedAssets": 9,
    "references": 11,
    "savingQuality": {},
    "sourceFiles": 3,
  },
  "unusedVectors": {
    "assets": null,
    "bytes": 0,
    "count": 0,
  },
  "version": 3,
}
`;

exports[`buildReport > plain-html: matches the approved human rendering 1`] = `
"Upfly audit

  savings not measured — images were not decoded (--no-probe)

  scanned 3 source files and found 11 images, 152.5 KB in total
  10 of 11 references resolved, pointing at 9 of those images
  2 images with no reference Upfly could follow

Nothing was skipped.

Findings — 3 items

  broken references (1) — these point at nothing
    about.html:10  images/missing-on-purpose.png

  unreferenced images (2)
    images/never-referenced.png  70 B
    images/removed.png  70 B

Worth knowing

  images were not decoded, so oversized assets and format opportunities are unknown
"
`;

exports[`buildReport > vite-react: matches the approved JSON shape 1`] = `
{
  "caveats": [
    {
      "code": "unused-vectors",
      "count": 1,
      "detail": [],
      "message": "1 unreferenced SVG totalling 307 B, not listed — Upfly neither converts an SVG nor deletes an asset, so there is no action to offer. Use --include-unused-svg to see them.",
    },
    {
      "code": "not-probed",
      "count": 0,
      "detail": [],
      "message": "images were not decoded, so oversized assets and format opportunities are unknown",
    },
    {
      "code": "svg-both-ways",
      "count": 2,
      "detail": [],
      "message": "SVG files are counted as images and also left unparsed: one can hold references of its own, and no adapter reads that yet (2 SVGs here)",
    },
  ],
  "coverage": {
    "excludedRoots": [
      {
        "path": "node_modules",
        "reason": "a build or version-control directory named 'node_modules'",
      },
    ],
    "servingRoots": {
      "declared": true,
      "dirs": [
        "public",
      ],
    },
    "unscannedExtensions": [
      {
        "ext": ".svg",
        "fileCount": 2,
      },
    ],
    "unscannedFileCount": 2,
  },
  "declined": {
    "assets": null,
    "bytes": 0,
    "count": 0,
  },
  "findings": [
    {
      "asset": "src/assets/orphan.png",
      "bytes": 70,
      "inPublicDir": false,
      "kind": "dead",
    },
  ],
  "references": {
    "byConfidence": {
      "certain": 2,
      "high": 10,
      "medium": 0,
      "unsafe": 0,
    },
    "byResolution": {
      "broken": 0,
      "discarded": 0,
      "dynamic": 0,
      "out-of-scope": 0,
      "resolved": 12,
      "resolved-pattern": 0,
      "unresolved-alias": 0,
    },
    "byResolvedVia": {
      "file": 5,
      "project-root": 0,
      "serving-root": 7,
      "speculative-root": 0,
    },
    "discarded": null,
    "discardedCount": 0,
    "unsafe": [],
  },
  "skipped": [],
  "staleConversions": [],
  "summary": {
    "assetBytes": 126939,
    "assets": 12,
    "findings": {
      "broken": 0,
      "dead": 1,
      "format-opportunity": 0,
      "oversized": 0,
      "possibly-dead": 0,
      "serving-root-unknown": 0,
    },
    "linkedReferences": 12,
    "potentialSavingBytes": 0,
    "probed": false,
    "referencedAssets": 10,
    "references": 12,
    "savingQuality": {},
    "sourceFiles": 5,
  },
  "unusedVectors": {
    "assets": null,
    "bytes": 307,
    "count": 1,
  },
  "version": 3,
}
`;

exports[`buildReport > vite-react: matches the approved human rendering 1`] = `
"Upfly audit

  savings not measured — images were not decoded (--no-probe)

  scanned 5 source files and found 12 images, 126.9 KB in total
  12 of 12 references resolved, pointing at 10 of those images
  2 images with no reference Upfly could follow
  including 1 unreferenced SVG, 307 B — counted, not listed: Upfly will neither convert an SVG nor delete an asset

Nothing was skipped.

Findings — 1 item

  unreferenced images (1)
    src/assets/orphan.png  70 B

Worth knowing

  1 unreferenced SVG totalling 307 B, not listed — Upfly neither converts an SVG nor deletes an asset, so there is no action to offer. Use --include-unused-svg to see them.
  images were not decoded, so oversized assets and format opportunities are unknown
  SVG files are counted as images and also left unparsed: one can hold references of its own, and no adapter reads that yet (2 SVGs here)
"
`;
